[tool.poetry]
name = "machine-learning-notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.1.post1"
torch = {version = "^2.2.2+rocm5.7", source = "rocm-pytorch"}
pandas = "^2.2.1"
seaborn = "^0.13.2"
nltk = "^3.8.1"
torchvision = {version = "^0.17.2+rocm5.7", source = "rocm-pytorch"}
timm = "^0.9.16"


[[tool.poetry.source]]
name = "rocm-pytorch"
url = "https://download.pytorch.org/whl/rocm5.7"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
